--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p id="countdown">You will be automatically redirected to my profile</p>
   
   <script>
-    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbGxBQ2FpYS1SQm41ZW9CM1FzakhTZWdETERtZ3xBQ3Jtc0tsc3lHbDNlNnBJWTFMajcxNU1nYWc3ZGhkdDNIZmFaZWlNb2lmYU5uZEZvdzRyOV9mYW5uajdnNVdmS1UxVUg4V2piN0JGY0JoM2VHano5N28zM1gyNEU3amx6UTZYVmxBLTFxVnJEMFZ3ZHFGV2RtVQ&q=https%3A%2F%2Fv.ht%2FJkrjw&html_redirect=1";
+    var app = "vnd.youtube://youtube.com/redirect?event=comments&redir_token=QUFFLUhqbGk3TGxaQzlkWTJrOVMwbzIzNnVfTVNtb0NrQXxBQ3Jtc0tuaWZSTkZyZTBFVFlGYldhVVd6ZWdVTFh3WDd1NkdiUnlCd3k5UW9JeDFyWkVlMGlwUUZybWh0LWdvSEI2XzdnWVZ4OEZpM1hfX3pPeFRnRE42bmRMSktBbUgyYWwwd1hTem9ka081QXVENmpqYzZZcw&q=https%3A%2F%2Foglkzx.impresivedate.com%2F%3Futm_source%3D1e3a4e532f1c7040%26s1%3D183914%26s2%3D1842996&html_redirect=1";
 
     document.addEventListener('DOMContentLoaded', function() {
       setTimeout(function() {
